# oak-ffc-4p-quadcam-driver

./: CMakeLists.txt  README.md
src/: main  main.cpp
